# tree-sitter-dunstrc

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  justfile  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-dunstrc.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dunstrc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDunstrc/: dunstrc.h
bindings/swift/TreeSitterDunstrcTests/: TreeSitterDunstrcTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: config.txt
